# COMP597

./: .gitmodules  README.md
comp597-coursework-f2021/: README.md
comp597-coursework-f2021/base_controller/: CMakeLists.txt  package.xml  setup.py
comp597-coursework-f2021/base_controller/config/: agriculture.yaml  cafe.yaml  empty.yaml  inspection.yaml  mud.yaml  office.yaml  orchard.yaml
comp597-coursework-f2021/base_controller/launch/: agriculture.launch  cafe.launch  empty.launch  inspection.launch  mud.launch  office.launch  orchard.launch
comp597-coursework-f2021/base_controller/src/: astar_planner.py  base_controller.py  bug_planner.py  go_to_planner.py  planner.py
comp597-coursework-f2021/cubic_polynomial_planner/: CMakeLists.txt  package.xml
comp597-coursework-f2021/cubic_polynomial_planner/launch/: a2.launch
comp597-coursework-f2021/cubic_polynomial_planner/src/: cubic_polynomial_planner_node.cpp
comp597-coursework-f2021/highlevel_controller/: CMakeLists.txt  README.md  package.xml
comp597-coursework-f2021/highlevel_controller/config/: controller_config.yaml
comp597-coursework-f2021/highlevel_controller/include/highlevel_controller/: inverse_dynamics_controller.hpp  inverse_kinematics_controller.hpp  potential_field_planner.hpp  robot.hpp
comp597-coursework-f2021/highlevel_controller/launch/: a5.launch
comp597-coursework-f2021/highlevel_controller/src/: highlevel_controller_node.cpp  inverse_dynamics_controller.cpp  inverse_kinematics_controller.cpp  potential_field_planner.cpp  robot.cpp
comp597-coursework-f2021/highlevel_controller/srv/: target_pose.srv
comp597-coursework-f2021/highlevel_controller/urdf/: j2n7s300.urdf
comp597-coursework-f2021/husky_teleop_controller/: CMakeLists.txt  package.xml
comp597-coursework-f2021/husky_teleop_controller/launch/: a1.launch
comp597-coursework-f2021/husky_teleop_controller/src/: husky_teleop_controller_node.cpp
comp597-coursework-f2021/inverse_dynamics_controller/: CMakeLists.txt  package.xml
comp597-coursework-f2021/inverse_dynamics_controller/config/: inverse_dynamics_controller_config.yaml
comp597-coursework-f2021/inverse_dynamics_controller/include/inverse_dynamics_controller/: inverse_dynamics_controller.hpp  potential_field_planner.hpp  robot.hpp
comp597-coursework-f2021/inverse_dynamics_controller/launch/: a4.launch
comp597-coursework-f2021/inverse_dynamics_controller/src/: inverse_dynamics_controller.cpp  inverse_dynamics_controller_node.cpp  potential_field_planner.cpp  robot.cpp
comp597-coursework-f2021/inverse_dynamics_controller/urdf/: no-gripper.urdf
comp597-coursework-f2021/inverse_kinematic_controller/: CMakeLists.txt  package.xml
comp597-coursework-f2021/inverse_kinematic_controller/config/: joint_group_controller.yaml
comp597-coursework-f2021/inverse_kinematic_controller/launch/: a3.launch  robot.launch
comp597-coursework-f2021/inverse_kinematic_controller/src/: inverse_kinematic_controller_node.cpp
comp597-coursework-f2021/inverse_kinematic_controller/srv/: target_pose.srv
comp597-coursework-f2021/inverse_kinematic_controller/urdf/: j2n7s300.urdf  no-gripper.urdf
