<?xml version="1.0"?>
<package format="2">
  	<name>base_controller</name>
  	<version>0.1.0</version>
  	<description>COMP597-A6</description>
	<maintainer email="alexandre.coulombe@mail.mcgill.ca">Alexandre Coulombe</maintainer>
  	<license>BSD</license>
	<author email="alexandre.coulombe@mail.mcgill.ca">Alexandre Coulombe</author>

  	<buildtool_depend>catkin</buildtool_depend>  
  	<depend>eigen</depend>
  	<depend>roscpp</depend>
  	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>gazebo_msgs</depend>
	<build_depend>roslint</build_depend>
</package>
