<?xml version="1.0"?>
<package format="2">
  <name>highlevel_controller</name>
  <version>0.1.0</version>
  <description>highlevel_controller for manipulator pick and place</description>
  <maintainer email="alexandre.coulombe@mail.mcgill.ca">Alexandre Coulombe</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>genmsg</depend>
  <depend>roslib</depend>
  <depend>Eigen3</depend>
  <depend>pinocchio</depend>
</package>
