<?xml version="1.0"?>
<package format="2">
  <name>husky_teleop_controller</name>
  <version>0.0.1</version>
  <description>Assignment 1 of COMP 597 - A simple teleoperation node for the ClearPath Husky</description>
  <maintainer email="alexandre.coulombe@mail.mcgill.ca">Alexandre Coulombe</maintainer>
  <license>BSD</license>
  <author email="alexandre.coulombe@mail.mcgill.ca">Alexandre Coulombe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

</package>
